refactor(api): use oapi-codegen to generate gin api
